--- a/style.css
+++ b/style.css
@@ -650,6 +650,11 @@ body {
   padding: 7rem 3.2rem 8rem 3.2rem;
 }
 
+.section-testimonials {
+  background-color: #ffe3e3;
+  padding: 0rem 3.2rem;
+}
+
 .heading-publications-box {
   text-align: center;
   margin-bottom: 4.8rem;
@@ -1089,6 +1094,7 @@ body {
   padding: 4.8rem 0 3.2rem 0;
   background-color: #fff5f5;
   position: relative;
+  display: none;
 }
 
 .contact-container {
@@ -1100,7 +1106,13 @@ body {
 .contact-grid {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr;
   column-gap: 2.4rem;
+  /* max-width: 70rem; */
+}
+
+.contact-grid:first-child {
+  max-width: 65rem;
 }
 
 .contact-title {
@@ -1116,7 +1128,7 @@ body {
 
 .contact-text {
   font-size: 1.6rem;
-  line-height: 1.8;
+  line-height: 2;
 }
 
 /* .socials {
@@ -1149,6 +1161,7 @@ body {
   display: flex;
   align-items: center;
   gap: 1.2rem;
+  margin: 3rem 0;
 }
 
 .instagram-box {
@@ -1195,4 +1208,368 @@ body {
 
 .mg-right {
   margin-right: 0.6rem;
+}
+
+.contact-grid-2 {
+  margin-top: 1rem;
+  margin-left: 7rem;
+  padding-right: 5rem;
+  /* font-style: italic; */
+  grid-template-columns: 1fr;
+  font-size: 5.8rem;
+}
+
+.contact-grid-2 span {
+  font-style: normal;
+  padding: 0 4rem;
+}
+
+.contact-grid-2 span {
+  font-style: normal;
+  padding: 0 4rem;
+}
+
+.contact-grid-2 .contact-text {
+  font-size: 1.65rem;
+  line-height: 3.2rem;
+}
+
+.contact-grid-2 .contact-text-footer {
+  padding: 0 5rem 0 20rem;
+  margin-bottom: 3rem;
+  font-size: 1.4rem;
+  font-style: italic;
+}
+
+/*****************************/
+/* SECTION REDACTIE*/
+/*****************************/
+
+.section-redactie {
+  padding: 4.8rem 0 3.2rem 0;
+  background-color: #fff5f5;
+  /* background-color: #fff; */
+
+  position: relative;
+}
+
+.section-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 100rem;
+  margin: 0 auto;
+  padding: 0 3.2rem 1.6rem 3.2rem;
+}
+
+.section-redactie .section-container {
+  /* background-color: #fff; */
+}
+
+.heading-redactie-container {
+  text-align: center;
+}
+
+.heading-redactie {
+  display: inline-block;
+  font-size: 3.6rem;
+  font-weight: 400;
+  color: #666;
+  margin-bottom: 2.4rem;
+  /* border: 5px solid #96f2d7; */
+  padding: 1.2rem 2.4rem;
+  border-radius: 100px;
+  line-height: 4.8rem;
+  margin-bottom: 5rem;
+}
+
+.section-redactie .contact-text-3 {
+  color: rgba(85, 85, 85, 0.7);
+}
+
+.redactie-content {
+  align-self: center;
+  font-size: 1.65rem;
+  line-height: 3.2rem;
+  max-width: 60rem;
+  margin-bottom: 5rem;
+  margin-top: 3rem;
+}
+
+/* SLIDER */
+.slider {
+  max-width: 100rem;
+  height: 50rem;
+  margin: 0 auto;
+  position: relative;
+
+  /* IN THE END */
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  top: 0;
+  width: 100%;
+  height: 50rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  /* THIS creates the animation! */
+  transition: transform 1s;
+}
+
+.slide > img {
+  /* Only for images that have different size than slide */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slider__btn {
+  position: absolute;
+  top: 50%;
+  z-index: 10;
+
+  border: none;
+  background: rgba(255, 255, 255, 0.7);
+  font-family: inherit;
+  color: #333;
+  border-radius: 50%;
+  height: 5.5rem;
+  width: 5.5rem;
+  font-size: 3.25rem;
+  cursor: pointer;
+}
+
+.slider__btn--left {
+  left: 6%;
+  transform: translate(-50%, -50%);
+}
+
+.slider__btn--right {
+  right: 6%;
+  transform: translate(50%, -50%);
+}
+
+.dots {
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+}
+
+.dots__dot {
+  border: none;
+  background-color: #b9b9b9;
+  opacity: 0.7;
+  height: 1rem;
+  width: 1rem;
+  border-radius: 50%;
+  margin-right: 1.75rem;
+  cursor: pointer;
+  transition: all 0.5s;
+
+  /* Only necessary when overlying images */
+  /* box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.7); */
+}
+
+.dots__dot:last-child {
+  margin: 0;
+}
+
+.dots__dot--active {
+  /* background-color: #fff; */
+  background-color: #888;
+  opacity: 1;
+}
+
+/* TESTIMONIALS */
+.testimonial {
+  width: 65%;
+  position: relative;
+}
+
+.testimonial__header {
+  font-size: 2.25rem;
+  font-weight: 500;
+  margin-bottom: 1.5rem;
+}
+
+.testimonial__text {
+  font-size: 1.7rem;
+  margin-bottom: 3.5rem;
+  color: #666;
+  line-height: 2.6rem;
+}
+
+.testimonial__author {
+  margin-left: 3rem;
+  font-style: normal;
+
+  display: grid;
+  grid-template-columns: 6.5rem 1fr;
+  column-gap: 2rem;
+}
+
+.testimonial__photo {
+  grid-row: 1 / span 2;
+  width: 6.5rem;
+  border-radius: 50%;
+}
+
+.testimonial__name {
+  font-size: 1.7rem;
+  font-weight: 500;
+  align-self: end;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+.testimonial__location {
+  font-size: 1.5rem;
+  line-height: 2.2rem;
+}
+
+.section__title--testimonials {
+  margin-bottom: 4rem;
+}
+
+.boek-titel {
+  font-style: italic;
+}
+
+.section {
+  padding: 15rem 3rem;
+  border-top: 1px solid #ddd;
+  background-color: #edcecb;
+
+  transition: transform 1s, opacity 1s;
+}
+
+.section--hidden {
+  opacity: 0;
+  transform: translateY(8rem);
+}
+
+.section__title {
+  max-width: 80rem;
+  margin: 0 auto 8rem auto;
+}
+
+/* Form */
+
+.form-container {
+  max-width: 100rem;
+  margin: 3.5rem auto 0 auto;
+  padding: 2.4rem;
+
+  background: linear-gradient(to bottom right, #99e9f2, #ffec99);
+  border-radius: 9px;
+  font-family: "Rubik", sans-serif;
+  color: #333;
+}
+
+.form {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 3.2rem;
+  row-gap: 2.4rem;
+}
+
+.form label {
+  display: block;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  color: #121212;
+  margin-left: 0.5rem;
+}
+
+.form input,
+.form select {
+  width: 100%;
+  padding: 1.2rem;
+  font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #fff;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
+}
+
+.form input::placeholder {
+  color: #aaa;
+}
+
+.cta *:focus {
+  outline: none;
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+.form-icon-container {
+  justify-self: center;
+}
+
+.form-icon {
+  height: 20rem;
+  width: 20rem;
+}
+
+.form--1-2 {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+  padding-top: 2rem;
+  padding-right: 2rem;
+}
+
+.text-area {
+  justify-self: center;
+  grid-column: 1/-1;
+}
+
+#full-name,
+#email,
+#textarea {
+  box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.15);
+}
+
+#textarea {
+  padding: 1rem 1.5rem 1rem 1.5rem;
+  font-size: 1.4rem;
+}
+
+.form textarea {
+  resize: none;
+  font-family: inherit;
+}
+
+.btn,
+.btn:link,
+.btn:visited {
+  justify-self: center;
+  grid-column: 1/-1;
+  background-color: #fff;
+  text-decoration: none;
+  font-size: 1.8rem;
+  font-weight: 600;
+  padding: 1.4rem 2.8rem;
+  border-radius: 9px;
+  box-shadow: 0 0.6rem 1.5rem rgba(0, 0, 0, 0.15);
+
+  border: 1px solid #121212;
+  cursor: pointer;
+  font-family: inherit;
+
+  transition: all 0.3s;
+}
+
+.btn:hover,
+.btn:active {
+  background-color: #e0f8fb;
+  transform: scale(1.05);
 }
