--- a/style.css
+++ b/style.css
@@ -745,39 +745,11 @@ body {
   z-index: -1;
 }
 
+.margin-top {
+  margin-top: 1rem;
+}
+
 /* VOORBEELD RONDJES OM ACHTERGRONDEN TE VERGELIJKEN */
-
-/* 44 vinden Isa en ik mooi voor een andere (zoom 80 of 100%) */
-
-/* 
-.inner-circle-80 {
-  opacity: 35%;
-  background-image: url(/imgs/innerbg23.jpg);
-  background-size: 120%;
-  background-position: center;
-  z-index: -1;
-}
-
-.inner-circle-81 {
-  opacity: 35%;
-  background-image: url(/imgs/innerbg24.jpg);
-  background-size: 130%;
-  z-index: -1;
-}
-
-.inner-circle-82 {
-  opacity: 35%;
-  background-image: url(/imgs/innerbg25.jpg);
-  background-size: 180%;
-  z-index: -1;
-}
-
-.inner-circle-83 {
-  opacity: 35%;
-  background-image: url(/imgs/innerbg21.jpg);
-  background-size: 130%;
-  z-index: -1;
-} */
 
 /* .inner-circle-84 {
   opacity: 35%;
@@ -792,6 +764,15 @@ body {
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
 /* XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX */
+
+.inner-circle-19 {
+  opacity: 40%;
+  background-image: url(/imgs/bg30.avif);
+  background-size: 125%;
+  background-position: 50% 55%;
+  background-position: 50% 76%;
+  z-index: -1;
+}
 
 .inner-circle-18 {
   opacity: 27.5%;
@@ -1500,14 +1481,39 @@ body {
 
 /* Form */
 
+.section-redactie-2 {
+  padding: 4.8rem 0 3.2rem 0;
+  background-color: #fff5f5;
+  background-color: #5a002c;
+  background-color: #087f5b;
+  background-color: #324f4d;
+  background-color: #365132;
+  background-color: #324f4d;
+  background-color: #3d7256;
+  background-color: #fff5f5;
+
+  position: relative;
+}
+
 .form-container {
   max-width: 100rem;
   margin: 3.5rem auto 0 auto;
   padding: 2.4rem;
 
-  background: linear-gradient(to bottom right, #99e9f2, #ffec99);
+  /* background: linear-gradient(to bottom right, #fff, #ffec99); */
+  background-color: #5a002c;
+  /* background-color: #087f5b; */
+  background-color: #fff5f5;
+  /* background: linear-gradient(to bottom right, #fff, #ffec99); */
+  background-color: #e5969c;
+  background-color: #e8c0b8;
+  background-color: #edcecb;
+  background-color: #ffe3e3;
+  background-color: #a9d7db;
+  background-color: #b3e4e8;
+  background-color: #caeaed;
+  background-color: #9dd1c1;
   border-radius: 9px;
-  font-family: "Rubik", sans-serif;
   color: #333;
 }
 
@@ -1523,7 +1529,7 @@ body {
   font-size: 1.6rem;
   font-weight: 500;
   margin-bottom: 1rem;
-  color: #121212;
+  color: #555;
   margin-left: 0.5rem;
 }
 
@@ -1535,7 +1541,9 @@ body {
   font-family: inherit;
   color: inherit;
   border: none;
-  background-color: #fff;
+  /* background-color: #fff; */
+  background-color: #edcecb;
+  background-color: #fff5f5;
   border-radius: 9px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
 }
@@ -1555,7 +1563,7 @@ body {
 
 .form-icon {
   height: 20rem;
-  width: 20rem;
+  /* width: 20rem; */
 }
 
 .form--1-2 {
@@ -1580,6 +1588,7 @@ body {
 #textarea {
   padding: 1rem 1.5rem 1rem 1.5rem;
   font-size: 1.4rem;
+  background-color: #fff5f5;
 }
 
 .form textarea {
